hphp/hack/test/typecheck/tparam_trailing_comma2.php.exp
File "tparam_trailing_comma2.php", line 3, characters 11-11:
Expected type parameter (Parsing[1002])
