hphp/hack/test/typecheck/tparam_trailing_comma2.php
<?hh // partial

class C<T,> {}
